--- a/VirtualDiskInterop/VirtualDiskInterop.vcxproj.filters
+++ b/VirtualDiskInterop/VirtualDiskInterop.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="Enumerations\ResizeVirtualDiskVersions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Enumerations\QueryChangesVirtualDiskFlags.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VirtualDiskInterop.cpp">
