Completed OpenVirtualDisk. Partial implementation of GetVirtualDiskInfo struct to native conversion function.

--- a/VirtualDiskInterop/VirtualDiskInterop.vcxproj.filters
+++ b/VirtualDiskInterop/VirtualDiskInterop.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClInclude Include="Structures\VirtualDiskSafeHandle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VirtualDiskInterop.cpp">
