--- a/VirtualDiskInterop/VirtualDiskInterop.vcxproj
+++ b/VirtualDiskInterop/VirtualDiskInterop.vcxproj
@@ -88,7 +88,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DEBUG</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
     </ClCompile>
     <Link>
@@ -99,7 +99,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DEBUG</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
     </ClCompile>
     <Link>
@@ -174,6 +174,7 @@
     <ClInclude Include="Structures\DeleteSnapshotVhdsetParameters.h" />
     <ClInclude Include="Structures\ExpandVirtualDiskParameters.h" />
     <ClInclude Include="Structures\GetVirtualDiskInfo.h" />
+    <ClInclude Include="Helpers.h" />
     <ClInclude Include="Structures\MergeVirtualDiskParameters.h" />
     <ClInclude Include="Structures\MirrorVirtualDiskParameters.h" />
     <ClInclude Include="Structures\ModifyVhdsetParameters.h" />
