--- a/VirtualDiskInterop/VirtualDiskInterop.vcxproj.filters
+++ b/VirtualDiskInterop/VirtualDiskInterop.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClInclude Include="Helpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Enumerations\ProviderSpecificSubtypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VirtualDiskInterop.cpp">
